# HayaoSuzuki.github.io

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
archive/books/2013/: 2013-06-14-labor-law.md
archive/books/2016/: 2016-08-13-simpsons-and-mathematics.md
archive/books/2018/: 2018-02-06-ai-vs-children.md
archive/essays/2015/: 2015-06-09-kamikaze-ojt.md
archive/essays/2020/: 2020-01-02-morning-meetings.md
archive/essays/2022/: 2022-02-16-west-side-story.md
docs/: .pages  cv.md  index.md
docs/articles/: .pages  2017-11-09-uuid4-collision.md  2024-03-22-with.md  2024-04-24-hypothesis-django.md  index.md
docs/articles/2024/: .pages  2024-04-24-hypothesis-django.md
docs/books/: .pages  index.md
docs/books/2013/: 2013-01-05-satake-linear-algebra.md
docs/books/2015/: .pages  2015-05-07-tcp-ip-introduction.md  (+2 more)
docs/essays/: .pages  2013-11-24-use-of-the-useless.md  2014-03-23-in-memory-of-uec.md  2014-06-18-infinite-possibilities.md  2014-10-21-fundamental-theorem-of-algebra.md  2015-06-09-kamikaze-ojt.md  2015-06-13-dev-without-vcs.md  2015-12-20-experience-stories.md  2017-07-21-signaling-and-self-study.md  2017-11-09-uuid4-collision.md  2020-08-03-esports-book.md  2020-08-05-useless-knowledge.md  2020-11-02-sapporo-travelogue.md  2021-05-01-unicorn-project.md  2024-04-09-black-or-blue.md  2024-12-31-books-read-in-2024.md  2025-06-13-dev-without-vcs.md  2025-07-25-morning-reading.md  2025-12-31-books-read-in-2025.md  index.md
docs/works/: .pages  presentations.md  translations.md
hooks/: autoindex.py
(+60 files in other folders)
