[project]
name = "hayaosuzuki-github-io"
version = "0.1.0"
description = "My GitHub Pages built with MkDocs Material"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.6",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
